# qa_guru_advanced_1

./: .env.sample.py  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/database/: engine.py  users.py
app/routers/: status.py  users.py
tests/: conftest.py  test_api.py  test_pagination.py  test_smoke.py
tests/models/: user.py
